# mod_auth_rgm

SOURCES/: 10-auth_rgm.conf  auth_rgm.conf
SOURCES/mod_auth_eon-5.0/: ChangeLog  Makefile  Makefile.in  configure  libtool
SOURCES/mod_auth_eon-5.0/src/: Makefile.am  mod_auth_eon.c
SOURCES/mod_auth_rgm-5.0/: AUTHORS  Makefile.am  NEWS  config.status  configure.ac
SOURCES/mod_auth_rgm-5.0/src/: Makefile  Makefile.in
SOURCES_TAR/: 10-auth_rgm.conf  auth_rgm.conf
SOURCES_TAR/mod_auth_rgm-5.0/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac  libtool
SOURCES_TAR/mod_auth_rgm-5.0/autom4/: config.sub  ltmain.sh
SOURCES_TAR/mod_auth_rgm-5.0/src/: Makefile  Makefile.am  Makefile.in  mod_auth_rgm.c
SOURCES_TAR/mod_auth_rgm-5.0/src/.deps/: mod_auth_eon.Plo  mod_auth_rgm.Plo
SPECS/: mod_auth_eon.spec  mod_auth_rgm.spec
